[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Buy.gd" type="Script" id=2]
[ext_resource path="res://assets/CoinPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/PixelOperator.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sound/click.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Cube" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Kanan" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Kanan"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -10.0
margin_right = -54.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kiri" type="Control" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Kiri"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.808
anchor_right = 0.5
anchor_bottom = 0.808
margin_left = -117.0
margin_top = -25.8
margin_right = -25.0
margin_bottom = -5.79999
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 30.0
margin_top = 30.0
margin_right = 72.0
margin_bottom = 50.0
rect_scale = Vector2( 1.7, 1.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Back"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 42.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "< Back"

[node name="Price" type="Button" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -200.0
margin_right = -15.0
margin_bottom = -180.0
rect_scale = Vector2( 2.5, 2.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Price"]
modulate = Color( 0.101961, 0.105882, 0.0980392, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "20000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinPanel" parent="CanvasLayer/Control" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 30.0
margin_right = -20.0
margin_bottom = 50.0

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="CanvasLayer/Kanan/Button" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="CanvasLayer/Kiri/Button" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="CanvasLayer/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_Back_pressed"]
